policies/gatekeeper/no-privileged-containers-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8snoprivilegedcontainers  # Must equal lowercase(kind)
spec:
  crd:
    spec:
      names:
        kind: K8sNoPrivilegedContainers  # This lowercase = metadata.name
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snoprivilegedcontainers

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          container.securityContext.privileged == true
          msg := sprintf("Container '%v' is running as privileged. This is not allowed.", [container.name])
        }
